feat:Resolucion de conflictos