@@ -1,15 +1,10 @@
 package com.clinicaregional.clinica.service.impl;
 
-
 import com.clinicaregional.clinica.dto.PacienteConUserDTO;
 import com.clinicaregional.clinica.dto.PacienteSinUserDTO;
 import com.clinicaregional.clinica.dto.TipoDocumentoDTO;
 import com.clinicaregional.clinica.dto.UsuarioDTO;
 import com.clinicaregional.clinica.dto.request.UpdatePacienteDTO;
-
-
-import com.clinicaregional.clinica.dto.PacienteDTO;
-
 import com.clinicaregional.clinica.dto.response.MyInfoPaciente;
 import com.clinicaregional.clinica.dto.response.PagedResponse;
 import com.clinicaregional.clinica.entity.Paciente;
@@ -21,7 +16,6 @@ import com.clinicaregional.clinica.exception.ResourceNotFoundException;
 import com.clinicaregional.clinica.mapper.PacienteMapper;
 import com.clinicaregional.clinica.repository.PacienteRepository;
 import com.clinicaregional.clinica.service.PacienteService;
-import com.clinicaregional.clinica.service.S3ServicePublic;
 import com.clinicaregional.clinica.service.TipoDocumentoService;
 import com.clinicaregional.clinica.mapper.SeguroMapper;
 import com.clinicaregional.clinica.repository.SeguroRepository;
@@ -34,12 +28,13 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Page;
-import org.springframework.web.multipart.MultipartFile;
 
 @Service
 @Slf4j
@@ -50,13 +45,9 @@ public class PacienteServiceImpl implements PacienteService {
     private final TipoDocumentoService tipoDocumentoService;
     private final UsuarioService usuarioService;
     private final FiltroEstado filtroEstado;
-
     private final SeguroRepository seguroRepository;
     private final BienvenidaEmailService emailService;
     private final SeguroMapper seguroMapper;
-
-    private final S3ServicePublic s3Service;
-
 
     @Autowired
     public PacienteServiceImpl(
@@ -64,35 +55,26 @@ public class PacienteServiceImpl implements PacienteService {
             PacienteMapper pacienteMapper,
             TipoDocumentoService tipoDocumentoService,
             UsuarioService usuarioService,
-
             FiltroEstado filtroEstado, SeguroRepository seguroRepository, BienvenidaEmailService emailService,
             SeguroMapper seguroMapper) {
-
-            FiltroEstado filtroEstado, S3ServicePublic s3Service) {
-
         this.pacienteRepository = pacienteRepository;
         this.pacienteMapper = pacienteMapper;
         this.tipoDocumentoService = tipoDocumentoService;
         this.usuarioService = usuarioService;
         this.filtroEstado = filtroEstado;
-
         this.seguroRepository = seguroRepository;
         this.emailService = emailService;
         this.seguroMapper = seguroMapper;
-
-        this.s3Service = s3Service;
-
     }
 
     @Transactional(readOnly = true)
     @Override
     public List<PacienteConUserDTO> listarPacientes() {
         filtroEstado.activarFiltroEstado(true);
-        List<PacienteDTO> pacientes = pacienteRepository.findAll()
+        return pacienteRepository.findAll()
                 .stream()
                 .map(pacienteMapper::mapToPacienteDTO)
-                .toList();
-        return pacientes.stream().map(this::agregarUrlImage).collect(Collectors.toList());
+                .collect(Collectors.toList());
     }
 
     // Listar pacientes sin importar el filtro de estado
@@ -109,10 +91,8 @@ public class PacienteServiceImpl implements PacienteService {
     @Override
     public Optional<PacienteConUserDTO> getPacientePorId(Long id) {
         filtroEstado.activarFiltroEstado(true);
-        Optional<PacienteDTO> paciente = pacienteRepository.findByIdAndEstadoIsTrue(id)
+        return pacienteRepository.findByIdAndEstadoIsTrue(id)
                 .map(pacienteMapper::mapToPacienteDTO);
-
-        return paciente.map(this::agregarUrlImage);
 
     }
 
@@ -120,25 +100,16 @@ public class PacienteServiceImpl implements PacienteService {
     @Override
     public Optional<PacienteConUserDTO> getPacientePorIdentificacion(String identificacion) {
         filtroEstado.activarFiltroEstado(true);
-        Optional<PacienteDTO> paciente = pacienteRepository.findByNumeroIdentificacion(identificacion)
+        return pacienteRepository.findByNumeroIdentificacion(identificacion)
                 .map(pacienteMapper::mapToPacienteDTO);
-        return paciente.map(this::agregarUrlImage);
     }
 
     @Transactional(readOnly = true)
     @Override
     // despues agregar validacion de owner
     public MyInfoPaciente getMyInfoPaciente(Long pacienteId) {
- dev
         Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(pacienteId)
                 .orElseThrow(() -> new ResourceNotFoundException("Paciente no encontrado con id" + pacienteId));
-/*
-        Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(pacienteId).orElseThrow(()->new ResourceNotFoundException("Paciente no encontrado con id" + pacienteId));
-        if (paciente.getImagenUrl() != null) {
-            String imageUrl = s3Service.generarUrlPublico(paciente.getImagenUrl());
-            paciente.setImagenUrl(imageUrl);
-        }*/
-
         return pacienteMapper.mapToMyInfoPaciente(paciente);
     }
 
@@ -146,7 +117,7 @@ public class PacienteServiceImpl implements PacienteService {
     @Transactional
     @Override
     public PacienteSinUserDTO crearPacienteSimple(PacienteSinUserDTO pacienteSimpleDTO) {
-        
+
         filtroEstado.activarFiltroEstado(true);
 
         // Validación de duplicados
@@ -164,7 +135,7 @@ public class PacienteServiceImpl implements PacienteService {
         if (pacienteSimpleDTO.getSeguro() != null) {
             seguro = pacienteSimpleDTO.getSeguro().getId() != null
                     ? seguroRepository.findById(pacienteSimpleDTO.getSeguro().getId())
-                            .orElseThrow(() -> new ResourceNotFoundException("Seguro no encontrado"))
+                    .orElseThrow(() -> new ResourceNotFoundException("Seguro no encontrado"))
                     : seguroRepository.save(seguroMapper.mapToSeguro(pacienteSimpleDTO.getSeguro()));
         }
 
@@ -189,11 +160,7 @@ public class PacienteServiceImpl implements PacienteService {
 
     @Transactional
     @Override
-
     public PacienteConUserDTO crearPacientePorWeb(PacienteConUserDTO pacienteDTO) {
-/*
-    public PacienteDTO crearPaciente(PacienteDTO pacienteDTO, MultipartFile imagen) {*/
-
         filtroEstado.activarFiltroEstado(true);
         if (pacienteRepository.findByNumeroIdentificacion(pacienteDTO.getNumeroIdentificacion()).isPresent()) {
             throw new DuplicateResourceException("Ya existe un paciente con ese número de identificación");
@@ -213,23 +180,13 @@ public class PacienteServiceImpl implements PacienteService {
             paciente.setUsuario(usuario);
         }
 
-        if (imagen != null) {
-            String key = s3Service.subirArchivo(imagen, "paciente" + paciente.getNombres());
-            paciente.setImagenUrl(key);
-        }
-
         Paciente savedPaciente = pacienteRepository.save(paciente);
-        return this.agregarUrlImage(pacienteMapper.mapToPacienteDTO(savedPaciente));
+        return pacienteMapper.mapToPacienteDTO(savedPaciente);
     }
 
     @Transactional
     @Override
-
     public PacienteConUserDTO actualizarPaciente(Long id, UpdatePacienteDTO updatePacienteDTO) {
-/*
-    public PacienteDTO actualizarPaciente(Long id, PacienteDTO pacienteDTO, MultipartFile imagen) {
-        filtroEstado.activarFiltroEstado(true);*/
-
         Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Paciente no encontrado con id: " + id));
 
@@ -250,23 +207,14 @@ public class PacienteServiceImpl implements PacienteService {
             paciente.setAntecedentes(updatePacienteDTO.getAntecedentes());
         }
 
-        if (imagen != null) {
-            if (paciente.getImagenUrl() != null) {
-                s3Service.eliminarArchivo(paciente.getImagenUrl());
-            }
-            String key = s3Service.subirArchivo(imagen, "paciente" + paciente.getNombres());
-            paciente.setImagenUrl(key);
-        }
-
         Paciente updatedPaciente = pacienteRepository.save(paciente);
-        return this.agregarUrlImage(pacienteMapper.mapToPacienteDTO(updatedPaciente));
+        return pacienteMapper.mapToPacienteDTO(updatedPaciente);
     }
 
     @Transactional
     @Override
     public void eliminarPaciente(Long id) {
         filtroEstado.activarFiltroEstado(true);
-
         Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Paciente no encontrado"));
 
@@ -292,16 +240,6 @@ public class PacienteServiceImpl implements PacienteService {
             paciente.setEstado(false);
             pacienteRepository.save(paciente);
         }
-/*
-        Paciente paciente = pacienteRepository.findByIdAndEstadoIsTrue(id).orElseThrow(() -> new ResourceNotFoundException("Paciente no encontrado"));
-        paciente.setEstado(false); //borrado logico
-        usuarioService.eliminar(paciente.getUsuario().getId());
-        paciente.setUsuario(null);
-        if (paciente.getImagenUrl() != null) {
-            s3Service.eliminarArchivo(paciente.getImagenUrl());
-        }
-        pacienteRepository.save(paciente);*/
-
     }
 
     @Override
@@ -312,10 +250,10 @@ public class PacienteServiceImpl implements PacienteService {
         List<PacienteConUserDTO> contenido = paginaPacientes.getContent()
                 .stream()
                 .map(pacienteMapper::mapToPacienteDTO)
-                .toList();
-        List<PacienteDTO> contenidoWithUrlImage = contenido.stream().map(this::agregarUrlImage).toList();
+                .collect(Collectors.toList());
+
         return new PagedResponse<>(
-                contenidoWithUrlImage,
+                contenido,
                 paginaPacientes.getNumber(),
                 paginaPacientes.getSize(),
                 paginaPacientes.getTotalElements(),
@@ -323,21 +261,10 @@ public class PacienteServiceImpl implements PacienteService {
                 paginaPacientes.isLast());
     }
 
-
     @Override
     public Optional<PacienteConUserDTO> getPacientePorEmail(String email) {
         filtroEstado.activarFiltroEstado(true);
         return pacienteRepository.findByEmail(email)
                 .map(pacienteMapper::mapToPacienteDTO);
     }
-
-    //funcion para obtener el url
-    private PacienteDTO agregarUrlImage(PacienteDTO pacienteDTO) {
-        if (pacienteDTO.getImagenUrl() != null) {
-            String imageUrl = s3Service.generarUrlPublico(pacienteDTO.getImagenUrl());
-            pacienteDTO.setImagenUrl(imageUrl);
-        }
-        return pacienteDTO;
-    }
-
 }
